launcher: remove incompatible launch flags
This patch removes both -XX:+CMSIncrementalMode and -XX:+UseConcMarkSweepGC
from the default launch options, as they are deprecated in OpenJDK 16.