@@ -71,4 +71,5 @@ Additionally, if you want to delete Minecraft itself, including worlds, mods, sh
 
 ## About fix_jvm_args.patch
 
-This patch file simply removes `-XX:+CMSIncrementalMode` from Minecraft's launch options. Although this patch file is not mandatory to make the launcher itself work, it *is* required to make Minecraft run out-of-the-box. That's because we're using JRE (Java Runtime Environment) version 11 to run the game, and that option is only compatible with JRE version 8 and older.
+This patch file simply removes two incompatible Java launch options: `-XX:+CMSIncrementalMode` and `-XX:+UseConcMarkSweepGC`.
+Although this patch file is not mandatory to make the launcher itself work, it *is* required to make Minecraft run out-of-the-box, as these two options are incompatible with the Java Runtime version we're using (16).
